# edge-learner

./: CMakeLists.txt  README.md  main.py  requirements.txt
.github/workflows/: ci.yml
collector/: __init__.py  buffer_manager.py  confidence_monitor.py  variant_tagger.py
config/: pipeline.yaml  rknn_quant.yaml  settings.py  variants.yaml
inference/: __init__.py  fallback_engine.py  frame_pipeline.py  rknn_engine.py
src/config/: Settings.cpp  Settings.hpp
src/inference/: FramePipeline.cpp  FramePipeline.hpp  RKNNEngine.cpp  RKNNEngine.hpp
systemd/: edge-learner.service
trainer/: __init__.py  dataset_builder.py  fine_tuner.py
uploader/: __init__.py  model_uploader.py
